modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-resources/rendered/test_samples/pods/001-example-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: default
spec:
    containers:
        - image: my.repo/app:latest
          name: foo
          resources:
            limits:
                cpu: 1
                memory: 128Mi
            requests:
                cpu: 1
                memory: 128Mi
