modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-resources/rendered/test_samples/pods/004-example-disallowed-3.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed
    namespace: default
spec:
    containers:
        - image: gcr.io/app:latest
          name: foo
          resources:
            limits:
                cpu: 1
                memory: 128Mi
            requests:
                cpu: 1
                memory: 128Mi
    initContainers:
        - image: gcr.io/init:latest
          name: init
          resources:
            limits:
                cpu: 1
                memory: 128Mi
            requests:
                memory: 128Mi
