modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-resources/rendered/test_samples/pods/005-example-disallowed-4.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed
    namespace: default
spec:
    containers:
        - image: gcr.io/app:latest
          name: foo
          resources:
            limits:
                cpu: 1
                memory: 128Mi
            requests:
                cpu: 1
                memory: 128Mi
    ephemeralContainers:
        - image: gcr.io/eph:latest
          name: eph
          resources:
            limits:
                cpu: 1
                memory: 128Mi
            requests:
                cpu: 1
