modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/container-resources/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-container-resources
tests:
  - name: operation-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        object: test_samples/pods/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed
        object: test_samples/pods/002-example-disallowed.yaml
        assertions:
          - violations: "yes"
      - name: example-disallowed-2
        object: test_samples/pods/003-example-disallowed-2.yaml
        assertions:
          - violations: "yes"
      - name: example-disallowed-3
        object: test_samples/pods/004-example-disallowed-3.yaml
        assertions:
          - violations: "yes"
      - name: example-disallowed-4
        object: test_samples/pods/005-example-disallowed-4.yaml
        assertions:
          - violations: "yes"
